[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/stages/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/bgtitle.jpg" type="Texture" id=2]
[ext_resource path="res://graphics/images/Logo.png" type="Texture" id=3]
[ext_resource path="res://scenes/stages/Buttons/TitleButtonDefault.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/vegur/Vegur-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/stages/Fade.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]

size = 14
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="TitleScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 288.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Logo" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 50.0
margin_right = 244.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="Botões" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 230.0
margin_right = 244.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="NovoJogo" parent="Botões" index="0" instance=ExtResource( 4 )]

margin_top = 47.0
margin_bottom = 78.0

[node name="Highscores" parent="Botões" index="1" instance=ExtResource( 4 )]

margin_top = 82.0
margin_bottom = 113.0
text = "Highscores"

[node name="Options" parent="Botões" index="2" instance=ExtResource( 4 )]

margin_top = 117.0
margin_bottom = 148.0
text = "Options"

[node name="Quit" parent="Botões" index="3" instance=ExtResource( 4 )]

margin_top = 152.0
margin_bottom = 183.0
text = "Quit"

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 490.0
margin_right = 291.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.175781, 0.175781, 0.175781, 1 )
text = "Made by Gabriel Zutião and Vinícius Perna"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Fade" parent="." index="4" instance=ExtResource( 6 )]

rect_clip_content = true
mouse_filter = 2
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]

[connection signal="pressed" from="Botões/NovoJogo" to="." method="_on_NovoJogo_pressed"]

[connection signal="pressed" from="Botões/Quit" to="." method="_on_Quit_pressed"]

[connection signal="animation" from="Fade" to="." method="_on_Fade_animation"]


